--- a/scss/components/_width.scss
+++ b/scss/components/_width.scss
@@ -1,4 +1,4 @@
-$j:260px,326px,350px,380px,810px,1063px,1364px;
+$j:124px,125px,140px,145px,178px,243px,245px,258px,260px,283px,326px,350px,380px,452px,810px,1023px,1024px,1063px,1364px;
 @each $i in $j {
   .width-#{$i}{
     max-width: 100%;
