--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -52,6 +52,7 @@
 @import 'pages/cuahang';
 @import 'pages/chi_tiet_sach';
 @import 'pages/dangnhap';
+@import 'pages/dangky';
 
 @import 'themes/theme';
 @import 'themes/admin';
