feat: update quenmatkhau

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -53,6 +53,7 @@
 @import 'pages/chi_tiet_sach';
 @import 'pages/dangnhap';
 @import 'pages/dangky';
+@import 'pages/quenmatkhau';
 
 @import 'themes/theme';
 @import 'themes/admin';
