--- a/scss/base/_uikits.scss
+++ b/scss/base/_uikits.scss
@@ -1,4 +1,12 @@
 .uk{
+  &-notification{
+    width: 600px;
+    &-message{
+      @extend .border-10;
+      /* M3/Elevation Light/3 */
+      box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px 0px rgba(0, 0, 0, 0.30);
+    }
+  }
   &-height{
     &-min{
       &-small{
