--- a/style.css
+++ b/style.css
@@ -166,6 +166,13 @@
   font-style: normal;
 }
 
+.uk-notification {
+  width: 600px;
+}
+.uk-notification-message {
+  /* M3/Elevation Light/3 */
+  box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
+}
 .uk-height-min-small {
   min-height: 150px;
 }
@@ -1700,7 +1707,7 @@
   border-radius: 14px;
 }
 
-.border-10 {
+.border-10, .uk-notification-message {
   border-radius: 10px;
 }
 
@@ -1835,6 +1842,9 @@
 }
 .icon20--google {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M19.6 10.2271C19.6 9.518 19.5364 8.83619 19.4182 8.18164H10V12.0498H15.3818C15.15 13.2998 14.4455 14.3589 13.3864 15.068V17.5771H16.6182C18.5091 15.8362 19.6 13.2725 19.6 10.2271Z' fill='%234285F4'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M10.0001 20.0004C12.7001 20.0004 14.9637 19.1049 16.6183 17.5777L13.3864 15.0686C12.491 15.6686 11.3455 16.0231 10.0001 16.0231C7.39554 16.0231 5.19099 14.264 4.40463 11.9004H1.06372V14.4913C2.70918 17.7595 6.09099 20.0004 10.0001 20.0004Z' fill='%2334A853'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M4.40455 11.9007C4.20455 11.3007 4.09091 10.6598 4.09091 10.0007C4.09091 9.34158 4.20455 8.70067 4.40455 8.10067V5.50977H1.06364C0.386364 6.85977 0 8.38704 0 10.0007C0 11.6143 0.386364 13.1416 1.06364 14.4916L4.40455 11.9007Z' fill='%23FBBC05'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M10.0001 3.97727C11.4683 3.97727 12.7864 4.48182 13.8228 5.47273L16.691 2.60455C14.9592 0.990909 12.6955 0 10.0001 0C6.09099 0 2.70918 2.24091 1.06372 5.50909L4.40463 8.1C5.19099 5.73636 7.39554 3.97727 10.0001 3.97727Z' fill='%23EA4335'/%3E%3C/svg%3E");
+}
+.icon20--check {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='none'%3E%3Cg clip-path='url(%23clip0_2304_29333)'%3E%3Cpath d='M6.6665 9.99935L8.77874 11.9004C9.13832 12.224 9.697 12.1744 9.994 11.7926L13.3332 7.49935M9.99984 18.3327C14.6022 18.3327 18.3332 14.6017 18.3332 9.99935C18.3332 5.39698 14.6022 1.66602 9.99984 1.66602C5.39747 1.66602 1.6665 5.39698 1.6665 9.99935C1.6665 14.6017 5.39747 18.3327 9.99984 18.3327Z' stroke='%2334C759' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_2304_29333'%3E%3Crect width='20' height='20' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
 }
 
 .icon24 {
