--- a/scss/components/_line-height.scss
+++ b/scss/components/_line-height.scss
@@ -34,6 +34,9 @@
 .line-height-155 {
   line-height: 1.55;
 }
+.line-height-158 {
+  line-height: 1.58;
+}
 .line-height-166 {
   line-height: 1.66;
 }
