--- a/scss/components/_row-gap.scss
+++ b/scss/components/_row-gap.scss
@@ -3,3 +3,13 @@
     margin-top: 30px;
   }
 }
+.row-gap-40 {
+  &.uk-grid-margin{
+    margin-top: 40px;
+  }
+}
+.row-gap-50 {
+  &.uk-grid-margin{
+    margin-top: 50px;
+  }
+}
