--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -82,13 +82,13 @@
       &--login{
         background: var(--brand-color);
         &:before{
-          content: '';
-          display: block;
-          width: 20px;
-          height: 20px;
-          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='none'%3E%3Cpath d='M12.4997 8.5553L11.4223 9.63271C11.0968 9.95815 11.0968 10.4858 11.4223 10.8112L12.4997 11.8886M11.6663 10.222L16.6663 10.222M3.33301 14.3886V6.05527M13.333 14.3886C13.333 15.3091 12.5868 16.0553 11.6663 16.0553H8.33301M13.333 6.05527C13.333 5.1348 12.5868 4.38861 11.6663 4.38861H8.33301M4.07517 16.5501L5.74184 17.6612C6.84943 18.3996 8.33301 17.6056 8.33301 16.2744V4.16947C8.33301 2.83831 6.84943 2.04432 5.74184 2.78272L4.07517 3.89383C3.61151 4.20294 3.33301 4.72333 3.33301 5.28058V15.1633C3.33301 15.7206 3.61151 16.2409 4.07517 16.5501Z' stroke='black' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E");
-          background-repeat: no-repeat;
-          background-position: center;
+          //content: '';
+          //display: block;
+          //width: 20px;
+          //height: 20px;
+          //background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='none'%3E%3Cpath d='M12.4997 8.5553L11.4223 9.63271C11.0968 9.95815 11.0968 10.4858 11.4223 10.8112L12.4997 11.8886M11.6663 10.222L16.6663 10.222M3.33301 14.3886V6.05527M13.333 14.3886C13.333 15.3091 12.5868 16.0553 11.6663 16.0553H8.33301M13.333 6.05527C13.333 5.1348 12.5868 4.38861 11.6663 4.38861H8.33301M4.07517 16.5501L5.74184 17.6612C6.84943 18.3996 8.33301 17.6056 8.33301 16.2744V4.16947C8.33301 2.83831 6.84943 2.04432 5.74184 2.78272L4.07517 3.89383C3.61151 4.20294 3.33301 4.72333 3.33301 5.28058V15.1633C3.33301 15.7206 3.61151 16.2409 4.07517 16.5501Z' stroke='black' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E");
+          //background-repeat: no-repeat;
+          //background-position: center;
         }
       }
     }
