--- a/scss/pages/_cuahang.scss
+++ b/scss/pages/_cuahang.scss
@@ -68,6 +68,7 @@
         &:checked {
           background-color: #2ABD11;
           border-color: #2ABD11;
+          background-size: 85%;
         }
       }
     }
