--- a/scss/pages/_chi_tiet_sach.scss
+++ b/scss/pages/_chi_tiet_sach.scss
@@ -1,4 +1,49 @@
 .chi_tiet_sach {
+  &__navbar{
+    background: #FFF;
+    box-shadow: 0px -10px 30px 0px rgba(0, 0, 0, 0.10);
+    bottom: -103px;
+    transition: all .3s ease;
+    &.uk-open{
+      bottom: 0;
+    }
+  }
+  &__btn1{
+    $x:14px;
+    padding-left: #{$x};
+    padding-right: calc(#{$x} - 2px);
+    background-color: #FFFCE8 !important;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+  }
+  &__btn2{
+    border-radius: 10px;
+    background: #DFDFDF;
+    display: flex;
+    width: var(----f1-number-32, 32px);
+    height: var(----f1-number-32, 32px);
+    padding: 8.04px 8px 7.96px 8px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-sizing: border-box;
+  }
+  &__btnSelect{
+    text-transform: inherit;
+    padding-left: 14px;
+    padding-right: 6px;
+    background: #F6F6F6;
+    >*{
+      &:first-child{
+        color: #000;
+        @extend .fz-16;
+        @extend .be-vietnam-pro-semibold;
+        @extend .line-height-171;
+      }
+    }
+  }
   &__tab{
     >*{
       >a{
