--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -38,6 +38,9 @@
 @import 'components/divider';
 @import 'components/icons';
 @import 'components/min-height';
+@import 'components/color';
+@import 'components/gap';
+@import 'components/cursor';
 
 @import 'layout/navigation';
 @import 'layout/grid';
