--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
   font-style: normal;
 }
 
-.be-vietnam-pro-semibold, .dangnhap__form__input, .chi_tiet_sach__tab > * > a, .chi_tiet_sach__btnSelect > *:first-child, .cuahang__fillter__moreLink, .uk-active > .sidebar-left__nav__a, .footer__top__nav > li > a, .header__bottom__label, .header__bottom__boxCat__nav__a, .header__bottom__boxCat__nav1__a, .header__bottom__boxCat__nav2 > li > a {
+.be-vietnam-pro-semibold, .sachdamua__dropdown .uk-nav > li > a, .sachdamua__search__input, .dangnhap__form__input, .chi_tiet_sach__tab > * > a, .chi_tiet_sach__btnDropnav > *:first-child, .chi_tiet_sach__btnSelect > *:first-child, .cuahang__fillter__moreLink, .uk-active > .sidebar-left__nav__a, .footer__top__nav > li > a, .header__bottom__label, .header__bottom__boxCat__nav__a, .header__bottom__boxCat__nav1__a, .header__bottom__boxCat__nav2 > li > a {
   font-family: "Be Vietnam Pro", sans-serif;
   font-weight: 600;
   font-style: normal;
@@ -1554,15 +1554,15 @@
   font-size: 0.625rem;
 }
 
-.fz-12, .pagination > * > * {
+.fz-12, .sachdamua__search__input, .pagination > * > * {
   font-size: 0.75rem;
 }
 
-.fz-14, .dangky__label, .dangnhap__form__input, .cuahang__fillter__moreLink, .sidebar-left__nav__a {
+.fz-14, .sachdamua__dropdown .uk-nav > li > a, .dangky__label, .dangnhap__form__input, .cuahang__fillter__moreLink, .sidebar-left__nav__a {
   font-size: 0.875rem;
 }
 
-.fz-16, .chi_tiet_sach__tab > * > a, .chi_tiet_sach__btnSelect > *:first-child {
+.fz-16, .chi_tiet_sach__tab > * > a, .chi_tiet_sach__btnDropnav > *:first-child, .chi_tiet_sach__btnSelect > *:first-child {
   font-size: 1rem;
 }
 
@@ -1860,7 +1860,7 @@
   line-height: 1.7;
 }
 
-.line-height-171, .chi_tiet_sach__btnSelect > *:first-child {
+.line-height-171, .chi_tiet_sach__btnDropnav > *:first-child, .chi_tiet_sach__btnSelect > *:first-child {
   line-height: 1.71;
 }
 
@@ -1870,6 +1870,10 @@
 
 .line-height-195 {
   line-height: 1.95;
+}
+
+.line-height-200 {
+  line-height: 2;
 }
 
 .row-gap-30.uk-grid-margin {
@@ -1887,6 +1891,12 @@
 .divider {
   height: 1px;
   background-color: #E6E6E6;
+}
+
+.divider-vertical-20 {
+  background: #E6E6E6;
+  width: 1px;
+  height: 20px;
 }
 
 .icon16 {
@@ -2038,6 +2048,12 @@
 .icon24--nghethu {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M4.07854 2.26562C2.46654 2.08346 1.25 3.42889 1.25 4.93478V16.1996C1.25 17.7428 2.46408 18.9538 3.91012 19.1172C6.08646 19.3631 8.91678 20.0191 10.8864 21.3993C11.553 21.8664 12.447 21.8664 13.1136 21.3993C15.0832 20.0191 17.9135 19.3631 20.0899 19.1172C21.5359 18.9538 22.75 17.7428 22.75 16.1996V11.3172C22.75 10.903 22.4142 10.5672 22 10.5672C21.5858 10.5672 21.25 10.903 21.25 11.3172V16.1996C21.25 16.9186 20.6712 17.5419 19.9215 17.6267C17.8215 17.864 14.9705 18.4787 12.75 19.8445V6.23855C12.8764 6.18573 12.9984 6.11897 13.1136 6.03826C13.5507 5.73192 14.0303 5.46126 14.5357 5.22284C14.8144 5.09137 15 4.81537 15 4.50723C15 3.9723 14.4654 3.60222 13.98 3.82704C13.372 4.10866 12.7888 4.43424 12.2528 4.80983C12.103 4.91479 11.897 4.91479 11.7472 4.80983C9.46948 3.21376 6.33895 2.52104 4.07854 2.26562ZM2.75 4.93478C2.75 4.17836 3.32631 3.69016 3.91012 3.75613C6.08646 4.00206 8.91678 4.65808 10.8864 6.03826C11.0016 6.11897 11.1236 6.18573 11.25 6.23855V19.8445C9.02952 18.4787 6.17853 17.864 4.07854 17.6267C3.32877 17.5419 2.75 16.9186 2.75 16.1996V4.93478Z' fill='%23966412'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M22.4068 7.65723C22.821 7.65723 23.1568 7.99301 23.1568 8.40723C23.1568 8.82144 22.821 9.15723 22.4068 9.15723H20.9926C20.5784 9.15723 20.2426 8.82144 20.2426 8.40723C20.2426 7.99301 20.5784 7.65723 20.9926 7.65723H22.4068ZM18.341 6.81605C18.6339 7.10894 19.1088 7.10894 19.4017 6.81605L20.8159 5.40184C21.1088 5.10894 21.1088 4.63407 20.8159 4.34118C20.523 4.04828 20.0481 4.04828 19.7552 4.34118L18.341 5.75539C18.0481 6.04828 18.0481 6.52316 18.341 6.81605ZM16.75 4.9145C17.1642 4.9145 17.5 4.57871 17.5 4.1645V2.75028C17.5 2.33607 17.1642 2.00028 16.75 2.00028C16.3358 2.00028 16 2.33607 16 2.75028V4.1645C16 4.57871 16.3358 4.9145 16.75 4.9145Z' fill='%23966412'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M4.25894 8.14021C4.32234 7.73087 4.70556 7.45043 5.11489 7.51382C6.41767 7.71558 7.88482 8.05282 9.27061 8.58871C9.65695 8.7381 9.84902 9.1724 9.69963 9.55873C9.55023 9.94507 9.11593 10.1371 8.7296 9.98775C7.47096 9.50103 6.1141 9.18645 4.88532 8.99615C4.47599 8.93276 4.19555 8.54954 4.25894 8.14021ZM4.25894 12.1402C4.32234 11.7309 4.70556 11.4504 5.11489 11.5138C5.77462 11.616 6.47457 11.7526 7.18358 11.9315C7.58521 12.0328 7.82865 12.4406 7.72732 12.8422C7.62599 13.2438 7.21826 13.4872 6.81663 13.3859C6.15824 13.2198 5.50457 13.0921 4.88532 12.9962C4.47599 12.9328 4.19555 12.5495 4.25894 12.1402Z' fill='%23966412'/%3E%3C/svg%3E%0A");
 }
+.icon24--filter {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Cpath d='M19.3188 2H5.68117C3.942 2 2.90466 3.91555 3.86937 5.34564L9.59107 12.8274C10.068 13.5344 10.3225 14.3651 10.3225 15.2148V20.9219C10.3225 21.8805 11.4952 22.3605 12.1811 21.6827L14.3586 19.5307C14.5628 19.329 14.6775 19.0553 14.6775 18.7699V15.2148C14.6775 14.3651 14.932 13.5344 15.4089 12.8274L21.1306 5.34564C22.0953 3.91555 21.058 2 19.3188 2Z' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+}
+.icon24--sort-arrow-down {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='21' height='14' viewBox='0 0 21 14' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M4.5 13.75C4.55004 13.75 4.59894 13.7451 4.64624 13.7358C5.35087 13.6985 6.04378 13.3922 6.55538 12.8166L8.06056 11.1233C8.33575 10.8137 8.30787 10.3396 7.99828 10.0645C7.68869 9.78926 7.21464 9.81715 6.93945 10.1267L5.43427 11.8201C5.3774 11.884 5.3156 11.9407 5.25 11.99V1C5.25 0.585787 4.91421 0.25 4.5 0.25C4.08579 0.25 3.75 0.585787 3.75 1V11.99C3.68441 11.9407 3.62261 11.884 3.56575 11.8201L2.06056 10.1267C1.78538 9.81715 1.31132 9.78926 1.00174 10.0645C0.692148 10.3396 0.664263 10.8137 0.939451 11.1233L2.44463 12.8166C2.95623 13.3922 3.64913 13.6985 4.35376 13.7357C4.40106 13.7451 4.44996 13.75 4.5 13.75ZM9.75 1C9.75 0.585786 10.0858 0.25 10.5 0.25H13.5C13.9142 0.25 14.25 0.585786 14.25 1C14.25 1.41421 13.9142 1.75 13.5 1.75H10.5C10.0858 1.75 9.75 1.41421 9.75 1ZM10.5 7.75C10.0858 7.75 9.75 7.41421 9.75 7C9.75 6.58579 10.0858 6.25 10.5 6.25H16.5C16.9142 6.25 17.25 6.58579 17.25 7C17.25 7.41421 16.9142 7.75 16.5 7.75H10.5ZM10.5 13.75C10.0858 13.75 9.75 13.4142 9.75 13C9.75 12.5858 10.0858 12.25 10.5 12.25H19.5C19.9142 12.25 20.25 12.5858 20.25 13C20.25 13.4142 19.9142 13.75 19.5 13.75H10.5Z' fill='black'/%3E%3C/svg%3E");
+}
 
 .min-height-72, .sachdamua__navbar .uk-navbar-nav > li > a, .sachdamua__navbar .uk-navbar-item,
 .sachdamua__navbar .uk-navbar-toggle {
@@ -2046,6 +2062,30 @@
 
 .min-height-103 {
   min-height: 103px;
+}
+
+.text-000, .sachdamua__dropdown .uk-nav > li > a {
+  color: black;
+}
+
+.text-9A96AA, .sachdamua__search__input::placeholder {
+  color: #9A96AA;
+}
+
+.text-966412 {
+  color: #966412;
+}
+
+.gap-8 {
+  gap: 8px;
+}
+
+.gap-24 {
+  gap: 24px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .header__top:not(.uk-navbar-transparent) {
@@ -2558,6 +2598,15 @@
 .chi_tiet_sach__btnSelect > *:first-child {
   color: #000;
 }
+.chi_tiet_sach__btnDropnav {
+  text-transform: inherit;
+  padding-left: 14px;
+  padding-right: 6px;
+  background: #F6F6F6;
+}
+.chi_tiet_sach__btnDropnav > *:first-child {
+  color: #000;
+}
 .chi_tiet_sach__tab > * > a {
   color: #999;
   width: 218px;
@@ -2659,6 +2708,43 @@
   padding: 0 24px;
   text-transform: inherit;
   background: var(--brand-color);
+}
+.sachdamua__search__input {
+  padding-left: 0 !important;
+  border-top: none !important;
+  border-left: none !important;
+  border-right: none !important;
+  color: #000;
+}
+.sachdamua__search__input:not(:focus) {
+  border-bottom: 1px solid transparent !important;
+}
+.sachdamua__search:has(.uk-search-icon-flip) .sachdamua__search__input {
+  padding-right: 40px;
+}
+.sachdamua__search__icon {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Cpath d='M19 18.5L22.5 22M21.5 11.5C21.5 6.25329 17.2467 2 12 2C6.75329 2 2.5 6.25329 2.5 11.5C2.5 16.7467 6.75329 21 12 21C17.2467 21 21.5 16.7467 21.5 11.5Z' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+}
+.sachdamua__search__icon svg {
+  opacity: 0;
+}
+.sachdamua__search .sachdamua__search__icon {
+  width: 40px;
+}
+.sachdamua__dropdown {
+  min-width: 166px;
+  padding: 5px 0;
+  border-radius: 10px;
+  background: #FFF;
+  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.05);
+}
+.sachdamua__dropdown .uk-nav > li > a {
+  padding: 12px 15px;
+}
+.sachdamua__dropdown .uk-nav > li:hover > a, .sachdamua__dropdown .uk-nav > li.uk-active > a {
+  background-color: #F6F6F6;
 }
 
 /*# sourceMappingURL=style.css.map */
