--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -60,6 +60,7 @@
 @import 'pages/dangky';
 @import 'pages/quenmatkhau';
 @import 'pages/sachdamua';
+@import 'pages/thongtintaikhoan';
 
 @import 'themes/theme';
 @import 'themes/admin';
