--- a/scss/pages/_sachdamua.scss
+++ b/scss/pages/_sachdamua.scss
@@ -62,11 +62,12 @@
     }
   }
   &__dropdown{
+    overflow: hidden;
     min-width: 166px;
-    padding: 5px 0;
+    padding: 0px 0;
     border-radius: 10px;
-    background: #FFF;
-    box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.05);
+    //background: #FFF;
+    //box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.05);
     .uk-nav{
       >li{
         >a{
