--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -61,6 +61,7 @@
 @import 'pages/quenmatkhau';
 @import 'pages/sachdamua';
 @import 'pages/thongtintaikhoan';
+@import 'pages/lichsumuahang';
 
 @import 'themes/theme';
 @import 'themes/admin';
