--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -62,6 +62,8 @@
 @import 'pages/sachdamua';
 @import 'pages/thongtintaikhoan';
 @import 'pages/lichsumuahang';
+@import 'pages/lichsunaptien';
+@import "pages/giohang";
 
 @import 'themes/theme';
 @import 'themes/admin';
