--- a/scss/pages/_lichsumuahang.scss
+++ b/scss/pages/_lichsumuahang.scss
@@ -38,7 +38,7 @@
         @extend .fz-16;
         @extend .be-vietnam-pro-medium;
         &:last-child{
-          padding-right: 0;
+          //padding-right: 0;
         }
       }
       th{
@@ -47,10 +47,10 @@
         @extend .fz-16;
         @extend .be-vietnam-pro-medium;
         &:first-child{
-          padding-left: 0;
+          //padding-left: 0;
         }
         &:last-child{
-          padding-right: 0;
+          //padding-right: 0;
         }
       }
     }
