--- a/style.css
+++ b/style.css
@@ -1892,6 +1892,13 @@
   line-height: 2;
 }
 
+.row-gap-20.uk-grid-margin {
+  margin-top: 20px;
+}
+.row-gap-20 > *.uk-grid-margin {
+  margin-top: 20px;
+}
+
 .row-gap-30.uk-grid-margin {
   margin-top: 30px;
 }
