--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -64,6 +64,7 @@
 @import 'pages/lichsumuahang';
 @import 'pages/lichsunaptien';
 @import "pages/giohang";
+@import "pages/chonphuongthucthanhtoan";
 
 @import 'themes/theme';
 @import 'themes/admin';
