--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -41,6 +41,7 @@
 @import 'components/color';
 @import 'components/gap';
 @import 'components/cursor';
+@import 'components/background';
 
 @import 'layout/navigation';
 @import 'layout/grid';
@@ -65,6 +66,7 @@
 @import 'pages/lichsunaptien';
 @import "pages/giohang";
 @import "pages/chonphuongthucthanhtoan";
+@import "pages/thongtinchuyenkhoan";
 
 @import 'themes/theme';
 @import 'themes/admin';
