--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
   font-style: normal;
 }
 
-.be-vietnam-pro-semibold, .lichsumuahang__label, .lichsumuahang__btn, .thongtintaikhoan__title, .thongtintaikhoan__btnSave, .sachdamua__dropdown .uk-nav > li > a, .sachdamua__search__input, .dangnhap__form__input, .chi_tiet_sach__tab > * > a, .chi_tiet_sach__btnDropnav > *:first-child, .chi_tiet_sach__btnSelect > *:first-child, .cuahang__fillter__moreLink, .uk-active > .sidebar-left__nav__a, .footer__top__nav > li > a, .header__bottom__label, .header__bottom__boxCat__nav__a, .header__bottom__boxCat__nav1__a, .header__bottom__boxCat__nav2 > li > a {
+.be-vietnam-pro-semibold, .thongtinchuyenkhoan__randomText > *, .lichsumuahang__label, .lichsumuahang__btn, .thongtintaikhoan__title, .thongtintaikhoan__btnSave, .sachdamua__dropdown .uk-nav > li > a, .sachdamua__search__input, .dangnhap__form__input, .chi_tiet_sach__tab > * > a, .chi_tiet_sach__btnDropnav > *:first-child, .chi_tiet_sach__btnSelect > *:first-child, .cuahang__fillter__moreLink, .uk-active > .sidebar-left__nav__a, .footer__top__nav > li > a, .header__bottom__label, .header__bottom__boxCat__nav__a, .header__bottom__boxCat__nav1__a, .header__bottom__boxCat__nav2 > li > a {
   font-family: "Be Vietnam Pro", sans-serif;
   font-weight: 600;
   font-style: normal;
@@ -1574,7 +1574,7 @@
   font-size: 0.75rem;
 }
 
-.fz-14, .sachdamua__dropdown .uk-nav > li > a, .dangky__label, .dangnhap__form__input, .cuahang__fillter__moreLink, .sidebar-left__nav__a {
+.fz-14, .thongtinchuyenkhoan__randomText > *, .sachdamua__dropdown .uk-nav > li > a, .dangky__label, .dangnhap__form__input, .cuahang__fillter__moreLink, .sidebar-left__nav__a {
   font-size: 0.875rem;
 }
 
@@ -2111,6 +2111,9 @@
 .icon24--info {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Ccircle cx='12.167' cy='17' r='1' transform='rotate(-180 12.167 17)' fill='%2328303F'/%3E%3Cpath d='M12.167 14L12.167 7M22.167 12C22.167 17.5228 17.6898 22 12.167 22C6.64414 22 2.16699 17.5228 2.16699 12C2.16699 6.47715 6.64414 2 12.167 2C17.6898 2 22.167 6.47715 22.167 12Z' stroke='%2328303F' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
+.icon24--copy {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 25 25' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M7.75 6.5C7.75 3.87665 9.87665 1.75 12.5 1.75L18.5 1.75C21.1234 1.75 23.25 3.87665 23.25 6.5V12.5C23.25 15.1234 21.1234 17.25 18.5 17.25H17.25V18.5C17.25 21.1234 15.1234 23.25 12.5 23.25H6.5C3.87665 23.25 1.75 21.1234 1.75 18.5V12.5C1.75 9.87665 3.87665 7.75 6.5 7.75H7.75V6.5ZM9.25 7.75H12.5C15.1234 7.75 17.25 9.87665 17.25 12.5V15.75H18.5C20.2949 15.75 21.75 14.2949 21.75 12.5V6.5C21.75 4.70507 20.2949 3.25 18.5 3.25L12.5 3.25C10.7051 3.25 9.25 4.70507 9.25 6.5V7.75ZM6.5 9.25C4.70507 9.25 3.25 10.7051 3.25 12.5V18.5C3.25 20.2949 4.70507 21.75 6.5 21.75H12.5C14.2949 21.75 15.75 20.2949 15.75 18.5V12.5C15.75 10.7051 14.2949 9.25 12.5 9.25H6.5Z' fill='%230CB0A7'/%3E%3C/svg%3E");
+}
 
 .min-height-26, .lichsumuahang__label {
   min-height: 26px;
@@ -2125,7 +2128,7 @@
   min-height: 103px;
 }
 
-.text-000, .sachdamua__dropdown .uk-nav > li > a {
+.text-000, .thongtinchuyenkhoan__randomText > *, .sachdamua__dropdown .uk-nav > li > a {
   color: black;
 }
 
@@ -2183,6 +2186,14 @@
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.background-FFF4D6 {
+  background: #FFF4D6;
+}
+
+.background-fff {
+  background: #fff;
 }
 
 .header__top:not(.uk-navbar-transparent) {
@@ -2847,7 +2858,7 @@
 .thongtintaikhoan__btnSave {
   text-transform: inherit;
   line-height: 40px;
-  padding: 0 24px;
+  padding: 0 20px;
   background: var(--brand-color);
 }
 .thongtintaikhoan__btnSave:hover {
@@ -2907,6 +2918,20 @@
 }
 .chonphuongthucthanhtoan__radioPay:checked ~ .chonphuongthucthanhtoan__card {
   border-color: #FFC01F;
+}
+
+.thongtinchuyenkhoan__box {
+  padding: 32px 20px;
+}
+.thongtinchuyenkhoan__box1 {
+  padding: 12px 16px;
+}
+.thongtinchuyenkhoan__randomText > * {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 18px;
 }
 
 /*# sourceMappingURL=style.css.map */
