--- a/style.css
+++ b/style.css
@@ -2168,7 +2168,7 @@
   color: #F19541;
 }
 
-.text-966412, .thongtintaikhoan__btnSave {
+.text-966412, .thongtinchuyenkhoan__btnHome:hover, .thongtintaikhoan__btnSave {
   color: #966412;
 }
 
@@ -2194,6 +2194,10 @@
 
 .background-fff {
   background: #fff;
+}
+
+.background-F6F6F6 {
+  background: #F6F6F6;
 }
 
 .header__top:not(.uk-navbar-transparent) {
@@ -2920,6 +2924,10 @@
   border-color: #FFC01F;
 }
 
+.thongtinchuyenkhoan__btnHome {
+  line-height: 44px;
+  text-transform: inherit;
+}
 .thongtinchuyenkhoan__box {
   padding: 32px 20px;
 }
