--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -67,6 +67,7 @@
 @import "pages/giohang";
 @import "pages/chonphuongthucthanhtoan";
 @import "pages/thongtinchuyenkhoan";
+@import "pages/xacnhanthanhtoanbangvi";
 
 @import 'themes/theme';
 @import 'themes/admin';
