--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -68,6 +68,7 @@
 @import "pages/chonphuongthucthanhtoan";
 @import "pages/thongtinchuyenkhoan";
 @import "pages/xacnhanthanhtoanbangvi";
+@import "pages/khongdusodu-vi";
 
 @import 'themes/theme';
 @import 'themes/admin';
