--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -19,3 +19,57 @@ $j: 1,2,3,4,5;
 .text-111827{
   color: #111827;
 }
+.text-911D21{
+  color: #911D21;
+}
+.text-D83A40{
+  color: #D83A40;
+}
+.text-BB252B{
+  color: #BB252B;
+}
+.text-000{
+  color: black;
+}
+.text-0C121C{
+  color: #0C121C;
+}
+.text-9A96AA{
+  color: #9A96AA;
+}
+.text-7E8299{
+  color: #7E8299;
+}
+.text-A1A5B7{
+  color: #A1A5B7;
+}
+.text-4B5563{
+  color: #4B5563;
+}
+.text-3F4254{
+  color: #3F4254;
+}
+.text-00A3FF{
+  color: #00A3FF;
+}
+.text-F1416C{
+  color: #F1416C;
+}
+.text-F19541{
+  color: #F19541;
+}
+.text-966412{
+  color: #966412;
+}
+.text-50CD89{
+  color: #50CD89;
+}
+.text-1F7411{
+  color: #1F7411;
+}
+.text-2BA117{
+  color: #2BA117;
+}
+.text-166534{
+  color: #166534;
+}
