--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -69,6 +69,7 @@
 @import "pages/thongtinchuyenkhoan";
 @import "pages/xacnhanthanhtoanbangvi";
 @import "pages/khongdusodu-vi";
+@import "pages/chitietdonhang";
 
 @import 'themes/theme';
 @import 'themes/admin';
