--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -70,6 +70,7 @@
 @import "pages/xacnhanthanhtoanbangvi";
 @import "pages/khongdusodu-vi";
 @import "pages/chitietdonhang";
+@import "pages/404";
 
 @import 'themes/theme';
 @import 'themes/admin';
