--- a/scss/components/_line-height.scss
+++ b/scss/components/_line-height.scss
@@ -19,6 +19,9 @@
 .line-height-133 {
   line-height: 1.33;
 }
+.line-height-138 {
+  line-height: 1.38;
+}
 .line-height-140 {
   line-height: 1.40;
 }
